<resources>
    <string name="app_name">AlarmClock</string>
    <string name="alarmOn">Включить</string>
    <string name="alarmOff">Выключить</string>
    <string name="updateAlarm">Включить будильник</string>
    <string name="service_stopped">on Destroy called</string>
    <string name="alarmTurnedOn">Будильник установлен на: </string>
    <string name="alarmTurnedOff">Будильник выключен!</string>
    <string name="alarmTurnOff">Выключить будильник</string>
    <string name="chanel_name">Будильник</string>
    <string name="chanel_description">Оповещение пользователя</string>
    <string name="title_activity_alarm_preferences">AlarmPreferences</string>
    <string name="one_time">Один раз</string>
    <string name="every_day">Ежедневно</string>
    <string name="days_of_week">Дни недели</string>
    <string name="weekends">Выходные</string>
    <string name="every_week">Еженедельно</string>
    <string name="monday">пн</string>
    <string name="tuesday">вт</string>
    <string name="wednesday">ср</string>
    <string name="thursday">чт</string>
    <string name="friday">пт</string>
    <string name="saturday">сб</string>
    <string name="sunday">вс</string>
    <string name="save">Сохранить</string>
</resources>
