<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        tools:context="com.learning.alarmclock.AlarmPreferences"
        android:weightSum="1">

    <RadioGroup
        android:id="@+id/alarm_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/one_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/one_time"/>

        <RadioButton
            android:id="@+id/every_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/every_day"/>

        <RadioButton
            android:id="@+id/days_of_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/days_of_week"/>

        <RadioButton
            android:id="@+id/weekends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weekends"/>

        <RadioButton
            android:id="@+id/every_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/every_week"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday"/>

        <CheckBox
            android:id="@+id/tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"/>

        <CheckBox
            android:id="@+id/wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wednesday"/>

        <CheckBox
            android:id="@+id/thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thursday"/>

        <CheckBox
            android:id="@+id/friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friday"/>

        <CheckBox
            android:id="@+id/saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturday"/>

        <CheckBox
            android:id="@+id/sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday"/>
    </LinearLayout>

</LinearLayout>
